sample/src/main/java/fail/toepic/lazylazy/sample/MainActivity.kt
package fail.toepic.lazylazy.sample

import android.content.Intent
import androidx.appcompat.app.AppCompatActivity
import android.os.Bundle
import fail.toepic.lazylazy.sample.color.ColorsActivity
import kotlinx.android.synthetic.main.activity_main.*

class MainActivity : AppCompatActivity() {

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_main)

        button.setOnClickListener {
            val intent = Intent(this,ColorsActivity::class.java)
            startActivity(intent)
        }

    }
}
